# minigrep

./: Cargo.toml  README.md
src/: greet.rs  lib.rs  main.rs
