[package]
name = "obs"
version = "0.1.0"
authors = ["Sergei Belokon <srj.belokon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.*", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.*", features = ["derive"] }
clap = { version = "~2.33.0" }
